--- a/aniseason/pubspec.yaml
+++ b/aniseason/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   go_router: ^6.0.0
   flutter_riverpod: ^2.1.3
   dropdown_button2: ^1.9.2
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
