--- a/aniseason/pubspec.yaml
+++ b/aniseason/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_riverpod: ^2.1.3
   dropdown_button2: ^1.9.2
   intl: ^0.18.1
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
