--- a/aniseason/pubspec.yaml
+++ b/aniseason/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   http: ^0.13.5
   cached_network_image: ^3.2.3
   tuple: ^2.0.1
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
@@ -58,7 +59,8 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
 flutter_launcher_icons:
-  android: "launcher_icon"
+  remove_alpha_ios: true
+  android: true
   ios: true
   image_path: "assets/icons/icon.png"
   min_sdk_android: 23
